# releaser

./: .gitignore  README.md  pyproject.toml
scripts/: create_release.sh
src/: main.py
