[tool.poetry]
name = "releaser"
version = "0.1.0"
description = ""
authors = ["Kosuke Hata <hata.kosuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
semver = "^2.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
