[tool.poetry]
name = "releaser"
version = "0.1.0"
description = ""
authors = ["Kosuke Hata <hata.kosuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
semver = "3.0.0-dev.3"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
